# Nmap Changelog ($Id$); -*-text-*-

o Protocol scan (-sO) probes for TCP, UDP, and SCTP now go to ports
  80, 40125, and 80 respectively, instead of being randomly generated
  or going to the same port as the source port. [David Fifield]

o [NSE] Added msrpc-enum script which queries MSRPC endpoint mapper for 
  available services and their information. [Aleksandar Nikolic]

o Made source port numbers (used to encode probe metadata) increment
  so as not to overlap between different scanning phases. Previously
  it was possible for an RST response to an ACK probe from host
  discovery to be misinterpreted as a reply to a SYN probe from port
  scanning. [Sean Rivera, David Fifield]

o [NSE] Updated mssql.lua library to support additional data types, enhanced
  some of the existing data types, added the DoneProc response token, and
	reordered code for maintainability. [Tom Sellers]

o [NSE] Added http-slowloris-check script which checks if the server is vulnerable
  to a Slowloris DoS attack in a safe way. [Aleksandar Nikolic]

o Removed pos_scan scan engine as the old implementation of RPC grind was the
  last scan type to use it. [Hani Benhabiles] 

o [NSE] Replaced old rpc grind implementation with a new NSE based implementation
  for easier maintainability and improved performance. [Hani Benhabiles] 

o [NSE] Added broadcast-pim-discovery script which discovers routers that are
  running PIM (Protocol Independant Multicast).  [Hani Benhabiles]

o [NSE] Added mtrace script which queries for the multicast path from a source
  to a destination host. [Hani Benhabiles]

o [NSE] Added broadcast-eigrp-discovery script which does network discovery and
  information gathering through Cisco's EIGRP protocol. [Hani Benhabiles]

o [NSE] Added eigrp.lua library which supports parsing and generating a small subset
  of Cisco's EIGRP packets. [Hani Benhabiles]

o [NSE] Added llmnr-resolve script which resolves a hostname by using the LLMNR